maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if (isDirectionFree(Direction.NORTH)) {
                       ^